--- a/osat_server/.vscode/launch.json
+++ b/osat_server/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "(gdb) Starten",
       "type": "cppdbg",
       "request": "launch",
-      "program": "Programmnamen eingeben, z. B. \"${workspaceFolder}/a.out\"",
+      "program": "${workspaceFolder}/build/osat_server_terminal",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
